--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
             </div>
         </div>
 
+        <div class="benefit">
+            <div class="navbe">
+
+            </div>
+            .contentbe
+        </div>
+
 
     </div>
 </body>
